--- a/Blog/Álgebra linear com LinearAlgebra.jl.qmd
+++ b/Blog/Álgebra linear com LinearAlgebra.jl.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Álgebra linear com LinearAlgebra.jl"
-description: "Principais pacotes para acessar diversos bancos de dados para as suas análises estatísticas em Julia."
+description: |
+  Aprenda e utilize álgebra linear com LinearAlgebra.jl.
 categories:
   - Pacotes
   - Ferramentas
@@ -9,7 +10,7 @@ author:
   - name: Sarah Pereira Teixeira Silva
     affiliation: "Universidade Estadual de Campinas"
     url: https://github.com/astrogenun
-date: "2025-07-24"
+date: "2025-08-03"
 image: imagens/algebralinear.png
 lang: pt
 format:
@@ -17,26 +18,32 @@ format:
     toc: true
     toc-depth: 3
     self-contained: false
-draft: true
+draft: false
+engine: knitr
 ---
+
+
 
 ## Introdução
 
 ::: justify
-A Álgebra Linear constitui a espinha dorsal de diversas áreas do conhecimento científico e tecnológico, como análise de dados, processamento de sinais, otimização, estatística multivariada, machine learning e mecânica quântica. Computacionaomente, uma linguagem eficiente como Julia oferece não apenas sintaxe intuitiva, mas também desempenho comparável a linguagens de baixo nível. O pacote `LinearAlgebra.jl`, integrante da biblioteca padrão, disponibiliza uma ampla variedade de funcionalidades para a manipulação eficiente de vetores, matrizes, resolução de sistemas lineares e decomposições matriciais. Neste post, exploraremos o uso do módulo, abordando desde operações elementares até técnicas mais sofisticadas, como decomposições matriciais, projeções e diagonalização.
+A Álgebra Linear constitui a espinha dorsal de diversas áreas do conhecimento científico e tecnológico, como análise de dados, processamento de sinais, otimização, estatística multivariada, machine learning e mecânica quântica. Computacionaomente, uma linguagem eficiente como `Julia` oferece não apenas sintaxe intuitiva, mas também desempenho comparável a linguagens de baixo nível. O pacote `LinearAlgebra.jl`, integrante da biblioteca padrão, disponibiliza uma ampla variedade de funcionalidades para a manipulação eficiente de vetores, matrizes, resolução de sistemas lineares e decomposições matriciais. Neste post, exploraremos o uso do módulo, abordando desde operações elementares até técnicas mais sofisticadas, como decomposições matriciais, projeções e diagonalização.
 :::
 
 ## Carregando o pacote
 
 O pacote `LinearAlgebra.jl` já está incluído na instalação padrão do Julia. Para utilizá-lo, basta importá-lo com o comando:
 
-``` julia
+
+```{julia}
 using LinearAlgebra
 ```
 
+
+
 Utilizaremos também o pacote `Random` para gerar matrizes aleatórias nos exemplos seguintes:
 
-``` julia
+```{julia}
 using Random
 ```
 
@@ -46,7 +53,8 @@ using Random
 Iniciamos com a criação de vetores e matrizes, bem como a execução de operações fundamentais, como multiplicação, produto escalar e cálculo de normas:
 :::
 
-``` julia
+
+```{julia}
 A = [1 2; 3 4]      # matriz 2x2
 v = [1, 2]          # vetor coluna
 
@@ -55,9 +63,12 @@ dot(v, v)           # produto escalar
 norm(v)             # norma (magnitude) do vetor
 ```
 
-## Propriedades de matrizes
 
-``` julia
+
+
+## Operações com matrizes
+
+```{julia}
 transpose(A)        # transposta
 inv(A)              # inversa
 det(A)              # determinante
@@ -71,7 +82,7 @@ rank(A)             # posto
 Em Julia, a forma mais eficiente de resolver um sistema linear (Ax = b) consiste no uso do operador barra invertida `\`, que seleciona automaticamente o algoritmo numérico apropriado com base nas características da matriz:
 :::
 
-``` julia
+```{julia}
 A = [3 1; 1 2]
 b = [9, 8]
 x = A \ b           # solução do sistema
@@ -85,25 +96,25 @@ Decomposições permitem entender a estrutura interna de uma matriz, facilitando
 
 ### LU (Fatoração de matrizes quadradas)
 
-``` julia
+```{julia}
 lu(A)
 ```
 
 ### QR (Bastante usada em regressão linear)
 
-``` julia
+```{julia}
 qr(A)
 ```
 
 ### SVD (Decomposição em valores singulares)
 
-``` julia
+```{julia}
 svd(A)
 ```
 
 ### Autovalores e autovetores
 
-``` julia
+```{julia}
 eigvals(A)
 eigvecs(A)
 ```
@@ -114,7 +125,7 @@ eigvecs(A)
 A geração de matrizes aleatórias permite simulações e testes práticos. Veja exemplos de operações úteis com matrizes densas:
 :::
 
-``` julia
+```{julia}
 Random.seed!(123)
 M = rand(3,3)      # matriz 3x3 com elementos aleatórios
 
@@ -129,7 +140,7 @@ M'                 # transposta conjugada
 Uma matriz $A$ é diagonalizável se existe uma matriz invertível $P$ tal que $D = P^{-1} A P$ seja diagonalizável.
 :::
 
-``` julia
+```{julia}
 V = eigvecs(A)
 D = Diagonal(eigvals(A))
 P = V
@@ -147,14 +158,16 @@ P_inv * A * P ≈ D   # Verificação
 Dada uma matriz $A$, seus espaços fundamentais (imagem, núcleo) são essenciais para entender soluções de sistemas e dimensões associadas:
 :::
 
-``` julia
-nullspace = nullspace(A)     # espaço nulo (ker A)
+```{julia}
+nullspace(A)                 # espaço nulo (ker A)
 colspace = A[:, :]           # espaço coluna (imagem)
+
+nullspace([1 2 3; 2 4 6] )   # Base não trivial
 ```
 
 E para projetar um vetor $b$ no subespaço gerado pelas colunas de $A$:
 
-``` julia
+```{julia}
 proj = A * (A \ b)
 ```
 
