--- a/Tutoriais/tutorial-eda.qmd
+++ b/Tutoriais/tutorial-eda.qmd
@@ -23,6 +23,12 @@ draft: false
 engine: knitr
 ---
 
+
+```{r, echo=FALSE}
+Sys.setenv(JULIA_HOME = "/Users/ctrucios/.juliaup/bin/")
+```
+
+
 # Introdução
 
 ::: {.justify}
