fix - draft + engine blog tidierdates

--- a/Blog/tidierdates.qmd
+++ b/Blog/tidierdates.qmd
@@ -18,8 +18,8 @@ format:
   html:
     toc: true
     self-contained: false
-engine: julia
-draft: false
+engine: knitr
+draft: true
 ---
 
 # Introdução
