--- a/Blog/pacotes_datasets.qmd
+++ b/Blog/pacotes_datasets.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Pacotes com Bancos de Dados para Trabalhar em Julia"
-description: "Principais pacotes para acessar diversos bancos de dados para as suas análises estatísticas em Julia."
+description: |
+  Principais pacotes para acessar conjuntos de dados em Julia e utilizá-los em suas análises estatísticas.
 categories:
   - Pacotes
   - Primeiros Passos
@@ -9,7 +10,10 @@ author:
     affiliation: "Universidade Estadual de Campinas"
     url: https://github.com/VitorRibasP
     orcid: 0009-0009-6923-7712
-date: "2025-07-10"
+  - name: Nicole Fredericci
+    affiliation: "Universidade Estadual de Campinas"
+    url: https://github.com/NFredericci
+date: "2025-08-27"
 image: imagens/pacotes_datasets.png
 lang: pt
 format:
@@ -17,87 +21,114 @@ format:
     toc: true
     toc-depth: 3
     self-contained: false
+engine: knitr
 draft: true
 ---
 
 ## Introdução
 
 ::: {.justify}
-Ao trabalhar com Estatística, é fundamental termos conjuntos de dados à disposição, seja para testar funções, aplicar análises aprendidas ou realizar simulações. No R, diversos bancos de dados já vêm carregados por padrão, o que facilita bastante esse processo. Felizmente, em Julia também contamos com vários pacotes que oferecem conjuntos de dados prontos para utilizarmos em nossas análises. Neste post, vamos conhecer alguns desses pacotes.
+Ao trabalhar com Estatística, é fundamental ter conjuntos de dados à disposição, seja para testar funções, praticar análises aprendidas ou realizar simulações. No `R`, diversos bancos de dados já vêm carregados por padrão, o que facilita bastante esse processo. Felizmente, `Julia` também oferece vários pacotes que contêm conjuntos de dados prontos para utilizarmos em nossas análises. 
+
+Neste post, vamos conhecer os principais pacotes para acessar diversos bancos de dados úteis em análises estatísticas.
 :::
 
 ## Instalando e Carregando os Pacotes Necessários
 
-Em primeiro lugar, vamos instalar e carregar os pacotes que serão utilizados.
+::: {.justify}
+Primeiro, vamos instalar e carregar os pacotes que serão utilizados. Para isso, basta executar o código abaixo no seu ambiente:
+::: 
+
 ```{julia}
-Pkg.add("DataFrames")
-using DataFrames
-Pkg.add("RDatasets")
-using RDatasets
-Pkg.add("MLDatasets")
-ENV["DATADEPS_ALWAYS_ACCEPT"] = "true"
-using MLDatasets
-Pkg.add("WorldBankData")
-using WorldBankData
-Pkg.add("YFinance")
-using YFinance
+Pkg.add([
+    "DataFrames",
+    "RDatasets",
+    "MLDatasets",
+    "WorldBankData",
+    "YFinance"
+])
+
+# Aceita automaticamente os termos do MLDatasets
+ENV["DATADEPS_ALWAYS_ACCEPT"] = "true";
+
+using DataFrames, RDatasets, MLDatasets, WorldBankData, YFinance
 ```
 
 ## RDatasets.jl
+
 ::: justify
-O pacote [RDatasets.jl](https://github.com/JuliaStats/RDatasets.jl) faz exatamente o que o nome sugere: disponibiliza os bancos de dados presentes no R base e em diversos de seus pacotes, prontos para uso em Julia. Ou seja, todos os conjuntos de dados tradicionais, como `iris` e `mtcars`, estão acessíveis aqui. Para carregá-los, utilizamos a função `dataset`.
+O pacote [RDatasets.jl](https://github.com/JuliaStats/RDatasets.jl) faz exatamente o que o nome sugere: disponibiliza os bancos de dados presentes na base do *R* e em diversos de seus pacotes, prontos para uso em *Julia*. Assim, todos os conjuntos de dados tradicionais, como `iris` e `mtcars`, ficam acessíveis no ambiente. Para carregá-los, utilizamos a função `dataset`.
 :::
+
 ```{julia}
 iris = dataset("datasets", "iris")
 ```
+
 ```{julia}
 mtcars = dataset("datasets", "mtcars")
 ```
+
 ::: justify
-Para verificar de quais pacotes do R podemos utilizar os bancos de dados, utilizamos a função `RDatasets.packages`.
+Para verificar quais pacotes do R possuem bancos de dados disponíveis, usamos a função `RDatasets.packages`.
 :::
+
 ```{julia}
 RDatasets.packages()
 ```
+
 ::: justify
-E, para verificar quais bancos de dados estão disponíveis por pacote, utilizamos a função `RDatasets.datasets` (`datasets` representa os conjuntos de dados do R base).
+E para verificar quais bancos de dados estão disponíveis em cada pacote, utilizamos a função `RDatasets.datasets` (onde `datasets` se refere aos conjuntos de dados do R base).
 :::
+
 ```{julia}
 RDatasets.datasets("datasets")
 ```
 
 ## MLDatasets.jl
+
 ::: justify
-O pacote [MLDatasets.jl](https://juliaml.github.io/MLDatasets.jl/stable/) possui inúmeros bancos de dados com foco em Machine Learning, desde detecção de imagens até treinamento de modelos de linguagem. Vamos acessar, por exemplo, o clássico conjunto de dados `MNIST`.
+O pacote [MLDatasets.jl](https://juliaml.github.io/MLDatasets.jl/stable/) possui inúmeros bancos de dados com foco em *Machine Learning*, abrangendo tarefas que vão desde detecção de imagens até treinamento de modelos de linguagem. Como exemplo, vamos acessar o clássico conjunto de dados `MNIST`.
 :::
+
 ```{julia}
 MNIST(:train)
 ```
 
 ## WorldBankData.jl
+
 ::: justify
-O pacote [WorldBankData.jl](https://github.com/4gh/WorldBankData.jl) permite o acesso direto aos dados do [Manco Mundial](https://data.worldbank.org/). A função principal é `wdi`, por meio da qual é possível consultar inúmeros indicadores para diferentes países. Por exemplo, vamos obter a população total do Brasil ao longo dos anos.
+O pacote [WorldBankData.jl](https://github.com/4gh/WorldBankData.jl) permite acessar diretamente os dados do [Banco Mundial](https://data.worldbank.org/). Sua função principal, `wdi`, possibilita consultar uma grande variedade de indicadores para diferentes países. Por exemplo, podemos usar essa função para obter a população total do Brasil ao longo dos anos.
 :::
+
 ```{julia}
 wdi("SP.POP.TOTL", "BR")
 ```
-Para visualizar a lista de indicadores, podemos utilizar a função `search_wdi`.
+
+::: justify
+Para visualizar a lista de indicadores disponíveis, podemos utilizar a função `search_wdi`.
+:::
+
 ```{julia}
 search_wdi("indicators", "name", r"." )
 ```
 
 ## YFinance.jl
+
 ::: justify
-O pacote [YFinance.jl](https://eohne.github.io/YFinance.jl/dev/) é uma forma direta de utilizar dados de ações. Entretanto, existem algumas limitações quanto ao seu uso. Para carregar os dados, utilizamos a função `get_prices`, em que especificamos a ação, o intervalo total dos dados e a frequência das observações. 
+O pacote [YFinance.jl](https://eohne.github.io/YFinance.jl/dev/) oferece uma maneira prática de acessar dados de ações, embora apresente algumas limitações de uso. Para carregar os dados, utilizamos a função `get_prices`, na qual podemos especificar o ativo desejado, o intervalo total e a frequência das observações.
 :::
+
 ```{julia}
 get_prices("AAPL", range="1y", interval="1d")
 ```
+
 ## Conclusão
 
 ::: {.justify}
-Portanto, gora você já sabe como acessar diversos conjuntos de dados em Julia para suas análises estatísticas. Para continuar aprendendo, escolha um desses pacotes, explore os dados disponíveis e realize uma análise completa. Para isso, recomendamos os tutoriais [Introdução à Análise Exploratória de Dados (EDA) em Julia](https://ime.unicamp.br/julialang/Tutoriais/tutorial-eda.html) e [Gráficos em Julia: primeiros passos
-](https://ime.unicamp.br/julialang/Tutoriais/graf_basico.html).
+Portanto, agora você já sabe como acessar diversos conjuntos de dados em `Julia` para suas análises estatísticas. Para continuar aprendendo, escolha um dos pacotes apresentados, explore os dados disponíveis e tente realizar uma análise completa. 
+
+Para auxiliar nesse processo, recomendamos os tutoriais [Introdução à Análise Exploratória de Dados (EDA) em Julia](https://ime.unicamp.br/julialang/Tutoriais/tutorial-eda.html) e [Gráficos em Julia: primeiros passos
+](https://ime.unicamp.br/julialang/Tutoriais/graf_basico.html), publicados aqui no **Do Zero ao Julia**.
 :::
 
 ::: callout-note
